roteiros/bonus_azuredevops_aks/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tarefas-api
  namespace: production
  labels:
    app: tarefas-api
spec:
  type: ClusterIP
  selector:
    app: tarefas-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
